[project]
name = "bca-rag-watermark-release"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "chromadb>=1.5.8",
    "google-genai>=1.74.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.0",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.0",
    "transformers>=4.50.0",
]
